# cpp_on_code_space

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  test_logger_basic.cpp  todo.md
how_to_openspec/: README.md
include/myproject/: calculator.h  logger.h
openspec/changes/archive/2026-04-09-create-basic-calculator/: design.md  tasks.md
openspec/changes/archive/2026-04-09-create-basic-calculator/specs/basic-calculator/: spec.md
openspec/changes/create-basic-calculator/: proposal.md
openspec/changes/create-basic-logger/: design.md  proposal.md  task.md  tasks.md
openspec/changes/create-basic-logger/specs/create-basic-logger/: spec.md
openspec/specs/basic-calculator/: spec.md
openspec/specs/basic-logger/: spec.md
prepare/: install_openspec.sh
src/: calculator.cpp  logdaemon.cpp  logger.cpp  logger_demo.cpp  main.cpp
src/module1/: foo.cpp  foo.h
tests/: CMakeLists.txt
tests/unit/: test_calculator.cpp  test_logger.cpp
